--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
-    "graphql-tools": "^3.0.2"
+    "graphql-tools": "^3.0.2",
+    "morgan": "^1.9.0"
   }
 }
